# libshmemq

./: .gitignore  Makefile.am  README.md  configure.ac
examples/: dummy.c  raw.h  raw_receiver.c  raw_sender.c
include/: Makefile.am  shmemq.h
include/shmemq/: dummy.h
src/: dummy.c  main.c
tests/: test_alternatively_push_and_pop_one_frame_messages_with_jump.c  test_cons_pops_buffer_start.c  test_cons_reaches_queue_end.c  test_dummy.c  test_error_str.c  test_finish_consumer.c  test_finish_producer.c  test_fork.c  test_init_consumer.c  test_init_producer.c  test_main.c  test_prod_jumps_to_buffer_start_and_pushes_too_long_message.c  test_prod_jumps_to_buffer_start_and_reaches_cons.c  test_prod_pushes_too_long_message.c  test_prod_reaches_buffer_end.c  test_push_and_pop_one_frame_messages_without_jump.c
